fixed white space problem in landing page

--- a/src/public/css/404-Page/styles.css
+++ b/src/public/css/404-Page/styles.css
@@ -94,3 +94,9 @@
     width: 120%;
     left: -10%;
 }
+
+@media (max-height: 700px) {
+    .main-content {
+        margin-top: 30px;
+    }
+}
